自動デプロイの準備

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -6,7 +6,11 @@
 
       <div class="u-field-form-img" >
         <%= f.label :image do %>
-          <%= image_tag resource.image, class:"u-img-prv" %>
+          <% if resource.image != nil %>
+            <%= image_tag resource.image, class:"u-img-prv" %>
+          <% else %>
+            <%= image_tag 'default_tent.png', width:'80', heigth:'80' %>
+          <% end %>
           <%= image_tag 'camera_icon.png', class:"u-img-cam" %>
           <%= f.file_field :image, style: "display:none", class:"u-e-prv" %>
         <% end %>
