--- a/app/assets/stylesheets/shared/footer.css
+++ b/app/assets/stylesheets/shared/footer.css
@@ -5,7 +5,7 @@ footer {
   height: 60px;
   margin-top: calc(100vh - 60px);
   /* background-color: chocolate; */
-  background-color: rgba(255, 255, 255);
+  background-color: rgb(255, 255, 255);
 }
 
 .footer {
