user editエラーを修正
画像がないユーザーが編集画面にいけないエラーを解決

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -6,7 +6,7 @@
 
       <div class="u-field-form-img" >
         <%= f.label :image do %>
-          <% if resource.image != nil %>
+          <% if resource.image.attached? %>
             <%= image_tag resource.image, class:"u-img-prv" %>
           <% else %>
             <%= image_tag 'default_tent.png', width:'80', heigth:'80' %>
