管理者用ページの土台を作成

--- a/app/views/gears/_genre_list.html.erb
+++ b/app/views/gears/_genre_list.html.erb
@@ -26,7 +26,7 @@
 <% elsif genre.id == 13 %>
   <%= image_tag 'cooker.png', class:"g-tent-img"%>
 <% elsif genre.id == 14 %>
-  <%= image_tag 'bag.png', class:"g-tent-img"%>
+  <%= image_tag 'salt.png', class:"g-tent-img"%>
 <% elsif genre.id == 15 %>
   <%= image_tag 'knife.png', class:"g-tent-img"%>
 <% elsif genre.id == 16 %>
