マップ機能の追加

--- a/app/assets/stylesheets/camp_sites.scss
+++ b/app/assets/stylesheets/camp_sites.scss
@@ -11,6 +11,22 @@
   margin: 20px auto;
 }
 
+.admin-gate {
+  width: 95vw;
+  margin: 10px auto;
+  text-align: center;
+}
+
+.site-search-form {
+  width: 95vw;
+  text-align: center;
+}
+
+#q_prefecture_id_eq {
+  width: 200px;
+  margin: 10px auto;
+}
+
 
 // camp-site search
 
