--- a/app/views/gears/_genre_list.html.erb
+++ b/app/views/gears/_genre_list.html.erb
@@ -6,7 +6,7 @@
 <% elsif genre.id == 3 %>
   <%= image_tag 'bag.png', class:"g-tent-img"%>
 <% elsif genre.id == 4 %>
-  <%= image_tag 'bag.png', class:"g-tent-img"%>
+  <%= image_tag 'bed.png', class:"g-tent-img"%>
 <% elsif genre.id == 5 %>
   <%= image_tag 'bag.png', class:"g-tent-img"%>
 <% elsif genre.id == 6 %>
@@ -14,7 +14,7 @@
 <% elsif genre.id == 7 %>
   <%= image_tag 'table.png', class:"g-tent-img"%>
 <% elsif genre.id == 8 %>
-  <%= image_tag 'bag.png', class:"g-tent-img"%>
+  <%= image_tag 'burner.png', class:"g-tent-img"%>
 <% elsif genre.id == 9 %>
   <%= image_tag 'bon-fire.png', class:"g-tent-img"%>
 <% elsif genre.id == 10 %>
@@ -34,7 +34,7 @@
 <% elsif genre.id == 17 %>
   <%= image_tag 'bag.png', class:"g-tent-img"%>
 <% elsif genre.id == 18 %>
-  <%= image_tag 'bag.png', class:"g-tent-img"%>
+  <%= image_tag 'sleepbag.png', class:"g-tent-img"%>
 <% elsif genre.id == 19 %>
   <%= image_tag 'paker.png', class:"g-tent-img"%>
 <% elsif genre.id == 20 %>
