--- a/app/views/camp_sites/index.html.erb
+++ b/app/views/camp_sites/index.html.erb
@@ -2,18 +2,22 @@
   <div class="s-c-sites-content">
 
     <h2 class="camp-site-title">
-    キャンプ場を検索
+    Search Campsites
     </h2>
+
+    <div class="map">
+      <%= render 'shared/japanmap' %>
+    </div>
 
     <% if current_user.admin? %>
       <h2 class="admin-gate">
-        <%= link_to "NewSite", new_camp_site_path, class:"admin-gate-btn"%>
+        <%= link_to "Add New Site", new_camp_site_path, class:"admin-gate-btn"%></br>
+        (ForAdmin)
       </h2>
     <% end %>
     <div class="site-search-form">
       <%= search_form_for @p, url: camp_sites_search_path do |f| %>
-        <%= f.label :site_eq, '都道府県' %>
-        <%= f.collection_select :prefecture_id_eq, @prefectures, :id, :name, include_lank: '指定なし' %>
+        <%= f.collection_select :prefecture_id_eq, @prefectures, :id, :name, include_lank: '指定なし'%>
         <div class="send-btn-area">
           <div class="t-send-btn">
             <%= f.submit '検索', class:"t-send" %>
