--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,12 +6,16 @@
     <title>Campary.</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
- 
+
+    <%# <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script> %>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    
+
   </head>
 
   <body id="top" >
+  <script type="text/javascript" src="https://unpkg.com/japan-map-js@1.0.1/dist/jpmap.min.js"></script>
   <% if user_signed_in? %>
     <header>
       <%= render 'shared/header' %>
