--- a/app/assets/stylesheets/tweets.scss
+++ b/app/assets/stylesheets/tweets.scss
@@ -12,7 +12,7 @@
 
   body {
     // background: url('bg-img.jpeg') no-repeat ;
-    background: url('camp2-img.jpeg') no-repeat ;
+    background: image-url('camp2-img.jpeg') no-repeat ;
     background-color: rgba(255, 255, 255, 0.7);
     background-blend-mode: lighten;
     background-position: center center;
