アイコンを追加

--- a/app/views/gears/_genre_list.html.erb
+++ b/app/views/gears/_genre_list.html.erb
@@ -2,13 +2,13 @@
 <% if genre.id == 1 %>
   <%= image_tag 'default_tent.png', class:"g-tent-img"%>
 <% elsif genre.id == 2 %>
-  <%= image_tag 'bag.png', class:"g-tent-img"%>
+  <%= image_tag 'tarp.png', class:"g-tent-img"%>
 <% elsif genre.id == 3 %>
-  <%= image_tag 'bag.png', class:"g-tent-img"%>
+  <%= image_tag 'hangmoc.png', class:"g-tent-img"%>
 <% elsif genre.id == 4 %>
   <%= image_tag 'bed.png', class:"g-tent-img"%>
 <% elsif genre.id == 5 %>
-  <%= image_tag 'bag.png', class:"g-tent-img"%>
+  <%= image_tag 'sheet.png', class:"g-tent-img"%>
 <% elsif genre.id == 6 %>
   <%= image_tag 'chair.png', class:"g-tent-img"%>
 <% elsif genre.id == 7 %>
@@ -18,9 +18,9 @@
 <% elsif genre.id == 9 %>
   <%= image_tag 'bon-fire.png', class:"g-tent-img"%>
 <% elsif genre.id == 10 %>
-  <%= image_tag 'bag.png', class:"g-tent-img"%>
+  <%= image_tag 'logg-stove.png', class:"g-tent-img"%>
 <% elsif genre.id == 11 %>
-  <%= image_tag 'bag.png', class:"g-tent-img"%>
+  <%= image_tag 'catcher.png', class:"g-tent-img"%>
 <% elsif genre.id == 12 %>
   <%= image_tag 'lantern.png', class:"g-tent-img"%>
 <% elsif genre.id == 13 %>
@@ -32,7 +32,7 @@
 <% elsif genre.id == 16 %>
   <%= image_tag 'box.png', class:"g-tent-img"%>
 <% elsif genre.id == 17 %>
-  <%= image_tag 'bag.png', class:"g-tent-img"%>
+  <%= image_tag 'rucksack.png', class:"g-tent-img"%>
 <% elsif genre.id == 18 %>
   <%= image_tag 'sleepbag.png', class:"g-tent-img"%>
 <% elsif genre.id == 19 %>
@@ -46,5 +46,5 @@
 <% elsif genre.id == 23 %>
   <%= image_tag 'hat.png', class:"g-tent-img"%>
 <% elsif genre.id == 24 %>
-  <%= image_tag 'bag.png', class:"g-tent-img"%>
+  <%= image_tag 'other.png', class:"g-tent-img"%>
 <% end %>
