--- a/app/assets/stylesheets/landing_page.scss
+++ b/app/assets/stylesheets/landing_page.scss
@@ -15,6 +15,43 @@
   left: auto;
 }
 
+.welcome-message{
+  height: 430px;
+  // background-color: aquamarine;
+  text-align: center;
+  margin-top: calc((100vh - 430px) /2 );
+
+  
+  .message-1 {
+      font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+      color: #fff;
+      font-size: 80px;
+      // background-color: burlywood;
+      height: 215px;
+      line-height: 215px;
+  }
+    .site-messages {
+      display: flex;
+      justify-content: center;
+
+      .message-2 {
+        font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        color: #fff;
+        font-size: 60px;
+        line-height: 215px;
+      }
+
+      .login-door-icon {
+        // background-color: chocolate;
+        width: 80px;
+        height: 80px;
+        margin-left: 30px;
+        margin-top: calc((215px - 50px) /2 );
+        cursor: pointer;
+      }
+    }
+}
+
 #solo-camp-sns {
   font-size: 50px;
   font-family: 'Homemade Apple', cursive;
@@ -27,7 +64,7 @@
 }
 
 #sign-container {
-  /* display: none; */
+  display: none;
   border: 1px solid white;
   border-radius: 10px;
   width: 350px;
