--- a/app/assets/stylesheets/landing_page.scss
+++ b/app/assets/stylesheets/landing_page.scss
@@ -24,7 +24,7 @@
   
   .message-1 {
       font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-      color: #fff;
+      color: rgba(240, 248, 255, 0.76);
       font-size: 80px;
       // background-color: burlywood;
       height: 215px;
@@ -36,7 +36,7 @@
 
       .message-2 {
         font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-        color: #fff;
+        color: rgba(240, 248, 255, 0.76);
         font-size: 60px;
         line-height: 215px;
       }
