--- a/app/assets/stylesheets/landing_page.scss
+++ b/app/assets/stylesheets/landing_page.scss
@@ -1,6 +1,6 @@
 .landing-page {
   height: 100vh;
-  background: url('campfire_mobile.jpeg') no-repeat ;
+  background: image-url('campfire_mobile.jpeg') no-repeat ;
   background-position: center center;
   background-size: cover;
   background-color: rgba(1, 0, 15, 0.952);
