--- a/app/views/gears/_genre_list.html.erb
+++ b/app/views/gears/_genre_list.html.erb
@@ -1,50 +1,52 @@
+<% genre.id == 1 %>
 
-<% if genre.id == 1 %>
+<% case genre.id %>
+<% when 1 %>
   <%= image_tag 'default_tent.png', class:"g-tent-img"%>
-<% elsif genre.id == 2 %>
+<% when 2 %>
   <%= image_tag 'tarp.png', class:"g-tent-img"%>
-<% elsif genre.id == 3 %>
+<% when 3 %>
   <%= image_tag 'hangmoc.png', class:"g-tent-img"%>
-<% elsif genre.id == 4 %>
+<% when 4 %>
   <%= image_tag 'bed.png', class:"g-tent-img"%>
-<% elsif genre.id == 5 %>
+<% when 5 %>
   <%= image_tag 'sheet.png', class:"g-tent-img"%>
-<% elsif genre.id == 6 %>
+<% when 6 %>
   <%= image_tag 'chair.png', class:"g-tent-img"%>
-<% elsif genre.id == 7 %>
+<% when 7 %>
   <%= image_tag 'table.png', class:"g-tent-img"%>
-<% elsif genre.id == 8 %>
+<% when 8 %>
   <%= image_tag 'burner.png', class:"g-tent-img"%>
-<% elsif genre.id == 9 %>
+<% when 9 %>
   <%= image_tag 'bon-fire.png', class:"g-tent-img"%>
-<% elsif genre.id == 10 %>
+<% when 10 %>
   <%= image_tag 'logg-stove.png', class:"g-tent-img"%>
-<% elsif genre.id == 11 %>
+<% when 11 %>
   <%= image_tag 'catcher.png', class:"g-tent-img"%>
-<% elsif genre.id == 12 %>
+<% when 12 %>
   <%= image_tag 'lantern.png', class:"g-tent-img"%>
-<% elsif genre.id == 13 %>
+<% when 13 %>
   <%= image_tag 'cooker.png', class:"g-tent-img"%>
-<% elsif genre.id == 14 %>
+<% when 14 %>
   <%= image_tag 'salt.png', class:"g-tent-img"%>
-<% elsif genre.id == 15 %>
+<% when 15 %>
   <%= image_tag 'knife.png', class:"g-tent-img"%>
-<% elsif genre.id == 16 %>
+<% when 16 %>
   <%= image_tag 'box.png', class:"g-tent-img"%>
-<% elsif genre.id == 17 %>
+<% when 17 %>
   <%= image_tag 'rucksack.png', class:"g-tent-img"%>
-<% elsif genre.id == 18 %>
+<% when 18 %>
   <%= image_tag 'sleepbag.png', class:"g-tent-img"%>
-<% elsif genre.id == 19 %>
+<% when 19 %>
   <%= image_tag 'paker.png', class:"g-tent-img"%>
-<% elsif genre.id == 20 %>
+<% when 20 %>
   <%= image_tag 'shirt.png', class:"g-tent-img"%>
-<% elsif genre.id == 21 %>
+<% when 21 %>
   <%= image_tag 'pants.png', class:"g-tent-img"%>
-<% elsif genre.id == 22 %>
+<% when 22 %>
   <%= image_tag 'shoes.png', class:"g-tent-img"%>
-<% elsif genre.id == 23 %>
+<% when 23 %>
   <%= image_tag 'hat.png', class:"g-tent-img"%>
-<% elsif genre.id == 24 %>
+<% when 24 %>
   <%= image_tag 'other.png', class:"g-tent-img"%>
 <% end %>
